Added readme and improved portability